--- a/package.json
+++ b/package.json
@@ -28,16 +28,23 @@
     "babel-polyfill": "^6.1.4",
     "babel-preset-es2015": "^6.1.4",
     "babel-preset-react": "^6.1.18",
-    "bootstrap": "^3.3.5",
+    "bootstrap-sass": "^3.3.5",
     "d3": "^3.5.9",
+    "font-awesome": "^4.4.0",
+    "node-sass": "^3.4.2",
     "react": "^0.14.3",
     "react-bootstrap": "^0.28.1",
     "react-d3": "^0.4.0",
     "react-dom": "^0.14.3",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.6"
   },
   "devDependencies": {
     "chai": "^3.4.1",
+    "css-loader": "^0.23.0",
+    "extract-text-webpack-plugin": "^0.9.1",
+    "file-loader": "^0.8.4",
     "mocha": "^2.3.3",
     "webpack-dev-server": "^1.12.1"
   }
