--- a/package.json
+++ b/package.json
@@ -28,24 +28,38 @@
     "babel-polyfill": "^6.1.4",
     "babel-preset-es2015": "^6.1.4",
     "babel-preset-react": "^6.1.18",
+    "bluebird": "^3.0.5",
     "bootstrap-sass": "^3.3.5",
     "d3": "^3.5.9",
+    "express": "^4.13.3",
+    "fiscaldata-js": "git+https://github.com/borysyuk/fiscal-data-js.git",
     "font-awesome": "^4.4.0",
+    "isomorphic-fetch": "^2.2.0",
+    "lodash": "^3.10.1",
     "node-sass": "^3.4.2",
+    "papaparse": "^4.1.2",
     "react": "^0.14.3",
     "react-bootstrap": "^0.28.1",
     "react-d3": "^0.4.0",
     "react-dom": "^0.14.3",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.4",
+    "redux-logger": "^2.0.4",
+    "redux-thunk": "^1.0.0",
+    "redux-undo": "^0.5.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.6"
   },
   "devDependencies": {
+    "babel-runtime": "^6.2.0",
     "chai": "^3.4.1",
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
     "mocha": "^2.3.3",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-dev-server": "^1.12.1",
+    "webpack-hot-middleware": "^2.5.0"
   }
 }
