--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-polyfill": "^6.1.4",
     "babel-preset-es2015": "^6.1.4",
     "babel-preset-react": "^6.1.18",
+    "babel-runtime": "^6.3.13",
     "bluebird": "^3.0.5",
     "bootstrap-sass": "^3.3.5",
     "d3": "^3.5.9",
