--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "bubbletree": "git+https://github.com/kravets-levko/bubbletree",
     "d3": "^3.5.9",
     "express": "^4.13.3",
-    "fiscaldata-js": "git+https://github.com/openspending/fiscal-data-js",
+    "fiscaldata-js": "git+https://github.com/borysyuk/fiscal-data-js#compile-es6-into-es5",
     "font-awesome": "^4.4.0",
     "isomorphic-fetch": "^2.2.0",
     "lodash": "^3.10.1",
@@ -62,7 +62,11 @@
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
     "jscs": "^2.7.0",
+    "jsdom": "^7.2.1",
     "mocha": "^2.3.3",
+    "mocha-jsdom": "^1.0.0",
+    "react-addons-test-utils": "^0.14.3",
+    "skin-deep": "^0.13.0",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-dev-server": "^1.12.1",
     "webpack-hot-middleware": "^2.5.0"
