--- a/package.json
+++ b/package.json
@@ -2,73 +2,83 @@
   "name": "fiscal-data-package-viewer",
   "version": "0.0.1-alpha",
   "description": "A frontend data/views app powered directly from a Fiscal Data Package.",
-  "main": "src/scripts/index.js",
+  "keywords": [],
+  "main": "index.js",
   "scripts": {
-    "test": "mocha --require babel-core/register --timeout 5000 test/*",
-    "build": "webpack --progress --colors",
-    "develop": "webpack-dev-server --progress --colors --watch",
-    "review": "jscs src"
+    "start": "node index.js",
+    "test": "mocha tests/*.js",
+    "review": "jscs app tests",
+    "develop": "gulp && npm start",
+    "build": "gulp"
+  },
+  "engines": {
+    "node": "^4.1.0",
+    "npm": "^2.14.0"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/openspending/fiscal-data-package-viewer.git"
   },
-  "keywords": [
-    "fiscal",
-    "data",
-    "openspending"
-  ],
-  "author": "Open Knowledge",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/openspending/fiscal-data-package-viewer/issues"
+  "author": {
+    "name": "Open Knowledge",
+    "email": "info@okfn.org",
+    "url": "https://okfn.org/"
   },
+  "contributors": [
+    {
+      "name": "Levko Kravets",
+      "email": "kravets@qarea.com"
+    }
+  ],
+  "license": "MIT",
+  "bugs": "https://github.com/openspending/fiscal-data-package-viewer/issues",
   "homepage": "https://github.com/openspending/fiscal-data-package-viewer#readme",
   "dependencies": {
-    "babel-core": "^6.1.4",
-    "babel-loader": "^6.2.0",
-    "babel-polyfill": "^6.1.4",
-    "babel-preset-es2015": "^6.1.4",
-    "babel-preset-react": "^6.1.18",
-    "babel-runtime": "^6.3.13",
+    "angular-filter": "^0.5.8",
+    "babbage.ui": "0.0.1-alpha",
     "bluebird": "^3.0.5",
-    "bootstrap-sass": "^3.3.5",
-    "bubbletree": "git+https://github.com/kravets-levko/bubbletree",
-    "d3": "^3.5.9",
+    "body-parser": "^1.14.1",
+    "c3": "git+https://github.com/masayuki0812/c3.git",
+    "d3": "^3.5.14",
+    "datapackage-registry": "^0.1.0",
+    "datapackage-validate": "git+https://github.com/okfn/datapackage-validate.git",
     "express": "^4.13.3",
-    "fiscaldata-js": "git+https://github.com/openspending/fiscal-data-js",
     "font-awesome": "^4.4.0",
-    "isomorphic-fetch": "^2.2.0",
-    "lodash": "^3.10.1",
-    "node-sass": "^3.4.2",
+    "goodtables": "git+https://github.com/okfn/goodtables-js.git",
+    "inflected": "^1.1.6",
+    "isomorphic-fetch": "^2.2.1",
+    "js-polyfills": "^0.1.12",
+    "json-table-schema": "0.0.2-alpha",
+    "marked": "^0.3.5",
+    "nconf": "^0.8.2",
+    "ng-redux": "^3.3.3",
+    "nunjucks": "^2.1.0",
     "papaparse": "^4.1.2",
-    "react": "^0.14.3",
-    "react-bootstrap": "^0.28.1",
-    "react-d3": "^0.4.0",
-    "react-dom": "^0.14.3",
-    "react-redux": "^4.0.0",
-    "redux": "^3.0.4",
-    "redux-logger": "^2.0.4",
-    "redux-thunk": "^1.0.0",
-    "redux-undo": "^0.5.0",
-    "sass-loader": "^3.1.2",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.6"
+    "redux": "^3.0.6",
+    "redux-undo": "^0.6.0",
+    "request": "^2.65.0",
+    "underscore": "^1.8.3",
+    "validator": "^4.2.1"
   },
   "devDependencies": {
-    "babel-runtime": "^6.2.0",
-    "chai": "^3.4.1",
-    "css-loader": "^0.23.0",
-    "extract-text-webpack-plugin": "^0.9.1",
-    "file-loader": "^0.8.4",
-    "jscs": "^2.7.0",
-    "jsdom": "^7.2.1",
+    "angular": "^1.4.7",
+    "bootstrap": "^3.3.5",
+    "browserify": "^12.0.1",
+    "chai": "^3.4.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-less": "^3.0.5",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.4.2",
+    "jquery": "^2.1.4",
+    "jscs": "^2.5.0",
     "mocha": "^2.3.3",
-    "mocha-jsdom": "^1.0.0",
-    "react-addons-test-utils": "^0.14.3",
-    "skin-deep": "^0.13.0",
-    "webpack-dev-middleware": "^1.4.0",
-    "webpack-dev-server": "^1.12.1",
-    "webpack-hot-middleware": "^2.5.0"
+    "resolve": "^1.1.6",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "zombie": "^4.2.1"
   }
 }
