package.json has been modified

--- a/package.json
+++ b/package.json
@@ -35,15 +35,17 @@
   "homepage": "https://github.com/openspending/fiscal-data-package-viewer#readme",
   "dependencies": {
     "angular-filter": "^0.5.8",
+    "angular-ui-bootstrap": "^1.1.2",
     "babbage.ui": "0.0.1-alpha",
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
+    "bubbletree": "git+https://github.com/okfn/bubbletree.git",
     "c3": "git+https://github.com/masayuki0812/c3.git",
     "d3": "^3.5.14",
     "datapackage-registry": "^0.1.0",
     "datapackage-validate": "git+https://github.com/okfn/datapackage-validate.git",
     "express": "^4.13.3",
-    "font-awesome": "^4.4.0",
+    "font-awesome": "^4.5.0",
     "goodtables": "git+https://github.com/okfn/goodtables-js.git",
     "inflected": "^1.1.6",
     "isomorphic-fetch": "^2.2.1",
