--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "jquery": "^2.1.4",
     "jscs": "^2.5.0",
     "mocha": "^2.3.3",
+    "nock": "^7.2.2",
     "resolve": "^1.1.6",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
