--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "mocha": "^2.3.3",
     "nock": "^7.2.2",
     "resolve": "^1.1.6",
+    "supertest": "^1.2.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "zombie": "^4.2.1"
