#874 Clean up project dependencies

--- a/package.json
+++ b/package.json
@@ -34,36 +34,32 @@
   "bugs": "https://github.com/openspending/os-viewer/issues",
   "homepage": "https://github.com/openspending/os-viewer#readme",
   "dependencies": {
-    "angular-animate": "^1.5.1",
-    "angular-filter": "^0.5.8",
-    "angular-marked": "^1.0.1",
-    "angular-ui-bootstrap": "^1.1.2",
-    "babbage.ui": "0.0.1-alpha",
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
-    "bubbletree": "git+https://github.com/okfn/bubbletree.git",
-    "c3": "git+https://github.com/masayuki0812/c3.git",
-    "d3": "^3.5.14",
     "express": "^4.13.3",
-    "font-awesome": "^4.5.0",
     "isomorphic-fetch": "^2.2.1",
     "js-polyfills": "^0.1.12",
     "marked": "^0.3.5",
     "nconf": "^0.8.2",
-    "ng-redux": "^3.3.3",
     "nunjucks": "^2.1.0",
-    "os-style-guide": "git+https://github.com/openspending/os-style-guide.git#dev",
     "papaparse": "^4.1.2",
-    "raphael": "^2.1.4",
     "request": "^2.65.0",
     "underscore": "^1.8.3",
     "validator": "^4.2.1"
   },
   "devDependencies": {
     "angular": "^1.4.7",
-    "bootstrap": "^3.3.5",
+    "angular-animate": "^1.5.1",
+    "angular-filter": "^0.5.8",
+    "angular-marked": "^1.0.1",
+    "babbage.ui": "0.0.1-alpha",
+    "bootstrap": "git+https://github.com/kravets-levko/bootstrap.git#feature/openspending",
     "browserify": "^12.0.1",
+    "bubbletree": "git+https://github.com/okfn/bubbletree.git",
+    "c3": "git+https://github.com/masayuki0812/c3.git",
     "chai": "^3.4.0",
+    "d3": "^3.5.14",
+    "font-awesome": "^4.5.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
@@ -76,6 +72,7 @@
     "jscs": "^2.5.0",
     "mocha": "^2.3.3",
     "nock": "^7.2.2",
+    "raphael": "^2.1.4",
     "resolve": "^1.1.6",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
