--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "bugs": "https://github.com/openspending/os-viewer/issues",
   "homepage": "https://github.com/openspending/os-viewer#readme",
   "dependencies": {
-    "babbage.ui": "0.1.5-alpha",
+    "babbage.ui": "^0.1.5-alpha",
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
@@ -53,7 +53,7 @@
     "angular-animate": "^1.5.1",
     "angular-filter": "^0.5.8",
     "angular-marked": "^1.0.1",
-    "bootstrap": "git+https://github.com/kravets-levko/bootstrap.git#feature/openspending",
+    "os-bootstrap": "git+https://github.com/openspending/os-bootstrap.git",
     "browserify": "^12.0.1",
     "bubbletree": "git+https://github.com/okfn/bubbletree.git",
     "c3": "git+https://github.com/masayuki0812/c3.git",
