breadcrumbs has been added; drilldown for vis embedded mode has been added

--- a/package.json
+++ b/package.json
@@ -53,12 +53,12 @@
     "angular-animate": "^1.5.1",
     "angular-filter": "^0.5.8",
     "angular-marked": "^1.0.1",
-    "os-bootstrap": "git+https://github.com/openspending/os-bootstrap.git",
     "browserify": "^12.0.1",
     "bubbletree": "git+https://github.com/okfn/bubbletree.git",
     "c3": "git+https://github.com/masayuki0812/c3.git",
     "chai": "^3.4.0",
     "d3": "^3.5.14",
+    "encoding": "^0.1.12",
     "font-awesome": "^4.5.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
@@ -72,6 +72,7 @@
     "jscs": "^2.5.0",
     "mocha": "^2.3.3",
     "nock": "^7.2.2",
+    "os-bootstrap": "git+https://github.com/openspending/os-bootstrap.git",
     "raphael": "^2.1.4",
     "resolve": "^1.1.6",
     "supertest": "^1.2.0",
