--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "index.js",
   "scripts": {
+    "install": "napa \"eligrey/FileSaver.js:file-saver\"",
     "start": "node index.js",
     "test": "mocha tests/*.js",
     "review": "jscs app tests",
@@ -42,6 +43,7 @@
     "js-polyfills": "^0.1.12",
     "lodash": "^4.6.1",
     "marked": "^0.3.5",
+    "napa": "^2.3.0",
     "nconf": "^0.8.2",
     "nunjucks": "^2.1.0",
     "papaparse": "^4.1.2",
