--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "os-bootstrap": "git+https://github.com/openspending/os-bootstrap.git",
     "raphael": "^2.1.4",
     "resolve": "^1.1.6",
+    "stringify": "^5.1.0",
     "supertest": "^1.2.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
