--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-less": "^3.0.5",
-    "gulp-minify-css": "^1.2.1",
+    "gulp-clean-css": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.4.2",
