--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "marked": "^0.3.5",
     "napa": "^2.3.0",
     "nconf": "^0.8.2",
+    "node-polyglot": "^2.0.0",
     "nunjucks": "^2.1.0",
     "papaparse": "^4.1.2",
     "qs": "^6.2.0",
