openspending/openspending#1010 Add sankey diagram

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [],
   "main": "index.js",
   "scripts": {
-    "install": "napa 'eligrey/FileSaver.js:file-saver'",
+    "install": "napa 'eligrey/FileSaver.js:file-saver' 'd3/d3-plugins:d3-plugins'",
     "start": "node index.js",
     "test": "mocha tests/*.js",
     "review": "jscs app tests",
