--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "install": "napa 'eligrey/FileSaver.js:file-saver' 'd3/d3-plugins:d3-plugins'",
-    "postinstall": "echo '(cd ./node_modules/babbage.ui/node_modules/ && rm -rf c3 d3 bubbletree raphael pivottable/node_modules/jquery) || true'",
+    "postinstall": "cd ./node_modules/babbage.ui/node_modules/ && rm -rf c3 d3 bubbletree raphael pivottable/node_modules/jquery",
     "start": "node index.js",
     "test": "mocha tests/*.js",
     "review": "jscs app tests",
@@ -39,7 +39,6 @@
     "babbage.ui": "^1.0.0",
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
-    "deep-assign": "^2.0.0",
     "express": "^4.13.3",
     "isomorphic-fetch": "^2.2.1",
     "js-polyfills": "^0.1.12",
