Allow theming of OS-Viewer (#137)
* Allow theming of OS-Viewer

* CR

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "papaparse": "^4.1.2",
     "qs": "^6.2.0",
     "request": "^2.65.0",
+    "require-dir-all": "^0.4.9",
     "text-encoding": "^0.6.1",
     "validator": "^4.2.1"
   },
