--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "bugs": "https://github.com/openspending/os-viewer/issues",
   "homepage": "https://github.com/openspending/os-viewer#readme",
   "dependencies": {
-    "babbage.ui": "^1.0.0",
+    "babbage.ui": "git+https://github.com/openspending/babbage.ui.git",
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
