Update project dependencies + remove unused; replace browserify with webpack; replace jscs with eslint; run app on port 4000 by default

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "install": "napa 'eligrey/FileSaver.js:file-saver' 'd3/d3-plugins:d3-plugins'",
     "start": "node index.js",
     "test": "mocha tests/*.js",
-    "review": "jscs app tests",
+    "review": "eslint app tests index.js gulpfile.js webpack.config.js --ignore-pattern 'app/views/snippets/*'",
     "develop": "gulp && npm start",
-    "build": "gulp"
+    "build:assets": "gulp",
+    "build:app": "webpack --hide-modules --config webpack.config.js",
+    "build": "npm run build:assets && npm run build:app"
   },
   "engines": {
     "node": "^4.1.0",
@@ -35,37 +37,39 @@
   "bugs": "https://github.com/openspending/os-viewer/issues",
   "homepage": "https://github.com/openspending/os-viewer#readme",
   "dependencies": {
+    "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-filter": "^0.5.9",
+    "angular-marked": "^1.2.2",
     "babbage.ui": "^1.2.3",
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
+    "bubbletree": "git+https://github.com/okfn/bubbletree.git",
+    "c3": "git+https://github.com/masayuki0812/c3.git",
+    "d3": "^3.5.14",
     "express": "^4.13.3",
+    "font-awesome": "^4.5.0",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^2.1.4",
     "js-polyfills": "^0.1.12",
     "lodash": "^4.6.1",
     "marked": "^0.3.5",
     "napa": "^2.3.0",
     "nconf": "^0.8.2",
     "node-polyglot": "^2.0.0",
+    "normalize-url": "^1.6.0",
     "nunjucks": "^2.1.0",
+    "os-bootstrap": "git+https://github.com/openspending/os-bootstrap.git",
     "papaparse": "^4.1.2",
     "qs": "^6.2.0",
     "request": "^2.65.0",
     "require-dir-all": "^0.4.9",
-    "text-encoding": "^0.6.1",
-    "validator": "^4.2.1"
+    "text-encoding": "^0.6.1"
   },
   "devDependencies": {
-    "angular": "^1.5.8",
-    "angular-animate": "^1.5.8",
-    "angular-filter": "^0.5.9",
-    "angular-marked": "^1.2.2",
-    "browserify": "^12.0.1",
-    "bubbletree": "git+https://github.com/okfn/bubbletree.git",
-    "c3": "git+https://github.com/masayuki0812/c3.git",
     "chai": "^3.4.0",
-    "d3": "^3.5.14",
-    "encoding": "^0.1.12",
-    "font-awesome": "^4.5.0",
+    "eslint": "^3.14.1",
+    "eslint-config-google": "^0.7.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean-css": "^2.0.0",
@@ -73,19 +77,14 @@
     "gulp-less": "^3.0.5",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.4.2",
-    "jquery": "^2.1.4",
-    "jscs": "^2.5.0",
+    "json-loader": "^0.5.4",
     "mocha": "^2.3.3",
     "nock": "^7.2.2",
-    "normalize-url": "^1.6.0",
-    "os-bootstrap": "git+https://github.com/openspending/os-bootstrap.git",
+    "null-loader": "^0.1.1",
     "raphael": "^2.1.4",
-    "resolve": "^1.1.6",
-    "stringify": "^5.1.0",
+    "raw-loader": "^0.5.1",
     "supertest": "^1.2.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^1.14.0",
     "zombie": "^4.2.1"
   }
 }
