Refactoring and code style

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,13 @@
     "no-lonely-if": 0,
     "no-invalid-this": 0,
     "comma-dangle": [2, "never"],
-    "quote-props": [2, "as-needed"]
+    "quote-props": [2, "as-needed"],
+    "indent": [2, 2, {
+      "SwitchCase": 1,
+      "VariableDeclarator": 1,
+      "MemberExpression": 1,
+      "FunctionDeclaration": {"parameters": 1, "body": 1},
+      "FunctionExpression": {"parameters": 1, "body": 1}
+    }]
   }
 }
