--- a/package.json
+++ b/package.json
@@ -84,7 +84,9 @@
     "null-loader": "^0.1.1",
     "raphael": "^2.1.4",
     "raw-loader": "^0.5.1",
+    "requiredir": "^1.0.7",
     "supertest": "^1.2.0",
+    "virtual-module-webpack-plugin": "^0.1.3",
     "webpack": "^1.14.0",
     "zombie": "^4.2.1"
   }
