--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "angular-animate": "^1.5.8",
     "angular-filter": "^0.5.9",
     "angular-marked": "^1.2.2",
-    "babbage.ui": "^1.2.3",
+    "babbage.ui": "^1.3.0",
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
     "bubbletree": "git+https://github.com/okfn/bubbletree.git",
@@ -85,6 +85,7 @@
     "raphael": "^2.1.4",
     "raw-loader": "^0.5.1",
     "supertest": "^1.2.0",
+    "val-loader": "^0.5.0",
     "webpack": "^1.14.0",
     "zombie": "^4.2.1"
   }
