Run the "build" script before starting "develop" script
If we just run "gulp", the app code isn't built, so we don't see our changes.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node index.js",
     "test": "mocha tests/*.js",
     "review": "eslint app tests index.js gulpfile.js webpack.config.js --ignore-pattern 'app/views/snippets/*'",
-    "develop": "gulp && npm start",
+    "develop": "npm run build && npm start",
     "build:assets": "gulp",
     "build:app": "webpack --hide-modules --config webpack.config.js",
     "build": "npm run build:assets && npm run build:app"
