--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [],
   "main": "index.js",
   "scripts": {
-    "install": "napa 'eligrey/FileSaver.js:file-saver' 'd3/d3-plugins:d3-plugins'",
+    "install": "napa 'eligrey/FileSaver.js:file-saver'",
     "start": "node index.js",
     "test": "mocha tests/*.js",
     "review": "eslint app tests index.js gulpfile.js webpack.config.js --ignore-pattern 'app/views/snippets/*'",
