--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "keywords": [],
   "main": "index.js",
   "scripts": {
-    "install": "napa 'eligrey/FileSaver.js:file-saver'",
     "start": "node index.js",
     "test": "mocha tests/*.js",
     "review": "eslint app tests index.js gulpfile.js webpack.config.js --ignore-pattern 'app/views/snippets/*'",
@@ -48,6 +47,7 @@
     "c3": "git+https://github.com/masayuki0812/c3.git",
     "d3": "^3.5.14",
     "express": "^4.13.3",
+    "file-saver": "^1.3.3",
     "font-awesome": "^4.5.0",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.1.4",
@@ -55,7 +55,6 @@
     "lodash": "^4.6.1",
     "lru-cache": "^4.0.2",
     "marked": "^0.3.5",
-    "napa": "^2.3.0",
     "nconf": "^0.8.2",
     "node-polyglot": "^2.0.0",
     "normalize-url": "^1.6.0",
