--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,9 @@
 {
   "extends": "google",
+  "env": {
+    "node": true,
+    "es6": true
+  },
   "rules": {
     "require-jsdoc": 0,
     "no-var": 0,
