--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "babbage.ui": "^1.6.0",
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
-    "bubbletree": "git+https://github.com/okfn/bubbletree.git",
-    "c3": "git+https://github.com/masayuki0812/c3.git",
+    "bubbletree": "^2.1.0",
+    "c3": "^0.4.18",
     "d3": "^3.5.14",
     "express": "^4.13.3",
     "file-saver": "^1.3.3",
