Add Sentry monitoring to Angular app
Already have Sentry monitoring for the express app, this commit adds
further monitoring for the clientside Angular app. An additional env
var, `SENTRY_PUBLIC_DSN`, is required in the container env.

Part of openspending/openspending#1239

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "papaparse": "^4.1.2",
     "qs": "^6.2.0",
     "raven": "^2.2.1",
+    "raven-js": "^3.20.1",
     "request": "^2.65.0",
     "require-dir-all": "^0.4.9",
     "text-encoding": "^0.6.1"
