--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [],
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "lookenv --dotenv -- node index.js",
     "test": "mocha tests/*.js",
     "posttest": "npm run review",
     "review": "eslint app tests index.js gulpfile.js webpack.config.js --ignore-pattern 'app/views/snippets/*'",
@@ -43,6 +43,7 @@
     "angular-filter": "^0.5.9",
     "angular-marked": "^1.2.2",
     "babbage.ui": "^1.6.3",
+    "babel-polyfill": "^6.26.0",
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
     "bubbletree": "^2.1.0",
@@ -55,6 +56,7 @@
     "jquery": "^2.1.4",
     "js-polyfills": "^0.1.12",
     "lodash": "^4.6.1",
+    "lookenv": "^0.6.3",
     "lru-cache": "^4.0.2",
     "marked": "^0.3.5",
     "nconf": "^0.8.2",
