--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "lodash": "^4.6.1",
     "lookenv": "^0.6.3",
     "lru-cache": "^4.0.2",
-    "marked": "^0.3.5",
+    "marked": "~0.3.9",
     "nconf": "^0.8.2",
     "node-polyglot": "^2.0.0",
     "normalize-url": "^1.6.0",
