--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,14 @@ env:
     - OS_BASE_URL=http://localhost
 
 install:
-  - make build
-  - docker run openspending/os-viewer:latest -d
+  - make docker-build
+  - make docker-run
 
 script:
-  - docker ps | grep -q latest
+  - make docker-test
+
+after_script:
+  - make docker-remove
 
 # notifications:
 #   slack:
