Use travis env vars to determine what to deploy
- If TRAVIS_PULL_REQUEST is not false, we want to push a docker image
tagged with the PR branch name
- If we're pushing to the master branch, we want to push a docker image
with the tag `latest` and with the git hash of the commit.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,11 @@ script:
   - make ci-test
 
 after_success:
-  - make ci-push-tag
+  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then make ci-push-tag TAG="${TRAVIS_PULL_REQUEST_BRANCH////_}"; fi'
 
 deploy:
   # deploy master to latest tag
   - provider: script
-    script: make ci-push-latest
+    script: make ci-push
     on:
       branch: master
