Add Nodemon and related dev start command script

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "lookenv --dotenv -- node index.js",
+    "start:dev": "nodemon npm run develop",
     "test": "mocha tests/*.js",
     "posttest": "npm run review",
     "review": "eslint app tests index.js gulpfile.js webpack.config.js --ignore-pattern 'app/views/snippets/*'",
@@ -87,6 +88,7 @@
     "json-loader": "^0.5.4",
     "mocha": "^3.4.2",
     "nock": "^7.2.2",
+    "nodemon": "^1.17.2",
     "null-loader": "^0.1.1",
     "raw-loader": "^0.5.1",
     "supertest": "^1.2.0",
