Pin punycode version to 1.4.1.
This is the most recent version that supports browsers and doesn't include ES6 features.

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "express": "^4.13.3",
     "file-saver": "^1.3.3",
     "font-awesome": "^4.5.0",
+    "install": "^0.12.2",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.1.4",
     "js-polyfills": "^0.1.12",
@@ -64,10 +65,12 @@
     "nconf": "^0.8.2",
     "node-polyglot": "^2.0.0",
     "normalize-url": "^1.6.0",
+    "npm": "^6.7.0",
     "nunjucks": "^2.1.0",
     "os-bootstrap": "git+https://github.com/openspending/os-bootstrap.git",
     "os-styles": "^0.0.2",
     "papaparse": "^4.1.2",
+    "punycode": "^1.4.1",
     "qs": "^6.2.0",
     "raven": "^2.2.1",
     "raven-js": "^3.20.1",
